feat: добавлены фичи в соответствии с з
